--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,12 +1,15 @@
 
-$primary: #B7C3F3;
-$secondary: #4F6272;
+$primary: #222831;
+$secondary: #393e46;
+$terciary:#eeeeee;
+$font-color: #aaa;
 $success: #DD7596;
 $info: #25D366;
 $warning: #C13584;
 $light: #4267B2;
 
 
+$box-shadow : 0 2px 10px 0 rgba(0, 0, 0, 0.6);
 
 $enable-gradient: true;
 
@@ -14,6 +17,97 @@ $btn-padding-y: .8rem;
 $btn-padding-x: 1rem;
 
 $btn-border-radius: 1rem;
+
+/* reseteo general */
+@mixin reset-pm {
+    padding: 0;
+    margin: 0;
+}
+
+@mixin btn($background-color, $color, $bold) {
+
+    background-color: $background-color;
+    color: $color;
+    border-radius: 50px;
+    padding: 20px 30px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    @if ($bold = 'true') {
+        font-weight: bolder;
+    }
+}
+
+.btn{
+    &.btn-cta{
+        @include btn($font-color, $secondary , 'true');
+        &:hover{
+            @include btn($secondary, $terciary, 'true');
+            box-shadow: $box-shadow;
+        }
+    }
+    &:hover{
+        @include btn($terciary, $secondary , 'true');
+        box-shadow: $box-shadow;
+    }
+}
+
+*{
+    @include reset-pm();
+    box-sizing: border-box;
+}
+
+body{
+    background-color: $primary;
+    font-family: "Roboto", sans-serif;    
+    background-image: url(../img/bg4.jpg);
+    background-size: 100% 100%;
+    a{
+        color:$secondary;
+        text-decoration: none;
+    }
+    h2{
+        font-weight: bolder;
+        font-size: 4.5rem;
+    }
+    h3{
+        font-weight: lighter;
+        font-size: 2.5rem;
+    }
+}
+.container{
+    box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
+}
+
+ul{
+    @include reset-pm();
+    list-style: none;
+    display: flex;
+    gap:20px;
+    li{        
+        a{
+            text-decoration: none;
+            @include btn($primary, $font-color , 'true');
+
+            &:hover{
+                @include btn($secondary, $terciary, 'false');
+                box-shadow: $box-shadow;
+            }
+        }
+        
+    }
+}
+
+header{
+    nav{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap-reverse;
+    }
+}
 
 
 
