--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,154 +1,7 @@
+/* Colores */
+/* Sombra */
 /* reseteo general */
-.btn.btn-cta {
-  background-color: #aaa;
-  color: #393e46;
-  border-radius: 50px;
-  padding: 20px 30px;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  font-weight: bolder;
-}
-
-.btn.btn-cta:hover {
-  background-color: #393e46;
-  color: #eeeeee;
-  border-radius: 50px;
-  padding: 20px 30px;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  font-weight: bolder;
-  -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
-          box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
-}
-
-.btn:hover {
-  background-color: #eeeeee;
-  color: #393e46;
-  border-radius: 50px;
-  padding: 20px 30px;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  font-weight: bolder;
-  -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
-          box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  background-color: #222831;
-  font-family: "Roboto", sans-serif;
-  background-image: url(../img/bg4.jpg);
-  background-size: 100% 100%;
-}
-
-body a {
-  color: #393e46;
-  text-decoration: none;
-}
-
-body h2, body .h2 {
-  font-weight: bolder;
-  font-size: 4.5rem;
-}
-
-body h3, body .h3 {
-  font-weight: lighter;
-  font-size: 2.5rem;
-}
-
-.container {
-  -webkit-box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
-}
-
-ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 20px;
-}
-
-ul li a {
-  text-decoration: none;
-  background-color: #222831;
-  color: #aaa;
-  border-radius: 50px;
-  padding: 20px 30px;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  font-weight: bolder;
-}
-
-ul li a:hover {
-  background-color: #393e46;
-  color: #eeeeee;
-  border-radius: 50px;
-  padding: 20px 30px;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  font-weight: bolder;
-  -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
-          box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
-}
-
-header nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap-reverse;
-      flex-wrap: wrap-reverse;
-}
-
+/* Boton Personalizado */
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -180,11 +33,11 @@ header nav {
   --bs-gray-900: #212529;
   --bs-primary: #222831;
   --bs-secondary: #393e46;
-  --bs-success: #DD7596;
-  --bs-info: #25D366;
-  --bs-warning: #C13584;
+  --bs-success: #dd7596;
+  --bs-info: #25d366;
+  --bs-warning: #c13584;
   --bs-danger: #dc3545;
-  --bs-light: #4267B2;
+  --bs-light: #4267b2;
   --bs-dark: #212529;
   --bs-primary-rgb: 34, 40, 49;
   --bs-secondary-rgb: 57, 62, 70;
@@ -2313,7 +2166,7 @@ progress {
 }
 
 .table-light {
-  --bs-table-bg: #4267B2;
+  --bs-table-bg: #4267b2;
   --bs-table-striped-bg: #4b6fb6;
   --bs-table-striped-color: #fff;
   --bs-table-active-bg: #5576ba;
@@ -3120,7 +2973,7 @@ textarea.form-control-lg {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 0.875em;
-  color: #DD7596;
+  color: #dd7596;
 }
 
 .valid-tooltip {
@@ -3145,16 +2998,16 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-control:valid, .form-control.is-valid {
-  border-color: #DD7596;
+  border-color: #dd7596;
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23DD7596' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23dd7596' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .form-control:valid:focus, .form-control.is-valid:focus {
-  border-color: #DD7596;
+  border-color: #dd7596;
   -webkit-box-shadow: 0 0 0 0.25rem rgba(221, 117, 150, 0.25);
           box-shadow: 0 0 0 0.25rem rgba(221, 117, 150, 0.25);
 }
@@ -3165,28 +3018,28 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-select:valid, .form-select.is-valid {
-  border-color: #DD7596;
+  border-color: #dd7596;
 }
 
 .was-validated .form-select:valid:not([multiple]):not([size]), .was-validated .form-select:valid:not([multiple])[size="1"], .form-select.is-valid:not([multiple]):not([size]), .form-select.is-valid:not([multiple])[size="1"] {
   padding-right: 4.125rem;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23DD7596' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23dd7596' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .form-select:valid:focus, .form-select.is-valid:focus {
-  border-color: #DD7596;
+  border-color: #dd7596;
   -webkit-box-shadow: 0 0 0 0.25rem rgba(221, 117, 150, 0.25);
           box-shadow: 0 0 0 0.25rem rgba(221, 117, 150, 0.25);
 }
 
 .was-validated .form-check-input:valid, .form-check-input.is-valid {
-  border-color: #DD7596;
+  border-color: #dd7596;
 }
 
 .was-validated .form-check-input:valid:checked, .form-check-input.is-valid:checked {
-  background-color: #DD7596;
+  background-color: #dd7596;
 }
 
 .was-validated .form-check-input:valid:focus, .form-check-input.is-valid:focus {
@@ -3195,7 +3048,7 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
-  color: #DD7596;
+  color: #dd7596;
 }
 
 .form-check-inline .form-check-input ~ .valid-feedback {
@@ -3444,8 +3297,8 @@ fieldset:disabled .btn {
 
 .btn-success {
   color: #000;
-  background-color: #DD7596;
-  border-color: #DD7596;
+  background-color: #dd7596;
+  border-color: #dd7596;
 }
 
 .btn-success:hover {
@@ -3479,14 +3332,14 @@ fieldset:disabled .btn {
 
 .btn-success:disabled, .btn-success.disabled {
   color: #000;
-  background-color: #DD7596;
-  border-color: #DD7596;
+  background-color: #dd7596;
+  border-color: #dd7596;
 }
 
 .btn-info {
   color: #000;
-  background-color: #25D366;
-  border-color: #25D366;
+  background-color: #25d366;
+  border-color: #25d366;
 }
 
 .btn-info:hover {
@@ -3520,14 +3373,14 @@ fieldset:disabled .btn {
 
 .btn-info:disabled, .btn-info.disabled {
   color: #000;
-  background-color: #25D366;
-  border-color: #25D366;
+  background-color: #25d366;
+  border-color: #25d366;
 }
 
 .btn-warning {
   color: #fff;
-  background-color: #C13584;
-  border-color: #C13584;
+  background-color: #c13584;
+  border-color: #c13584;
 }
 
 .btn-warning:hover {
@@ -3561,8 +3414,8 @@ fieldset:disabled .btn {
 
 .btn-warning:disabled, .btn-warning.disabled {
   color: #fff;
-  background-color: #C13584;
-  border-color: #C13584;
+  background-color: #c13584;
+  border-color: #c13584;
 }
 
 .btn-danger {
@@ -3608,8 +3461,8 @@ fieldset:disabled .btn {
 
 .btn-light {
   color: #fff;
-  background-color: #4267B2;
-  border-color: #4267B2;
+  background-color: #4267b2;
+  border-color: #4267b2;
 }
 
 .btn-light:hover {
@@ -3643,8 +3496,8 @@ fieldset:disabled .btn {
 
 .btn-light:disabled, .btn-light.disabled {
   color: #fff;
-  background-color: #4267B2;
-  border-color: #4267B2;
+  background-color: #4267b2;
+  border-color: #4267b2;
 }
 
 .btn-dark {
@@ -3757,14 +3610,14 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-success {
-  color: #DD7596;
-  border-color: #DD7596;
+  color: #dd7596;
+  border-color: #dd7596;
 }
 
 .btn-outline-success:hover {
   color: #000;
-  background-color: #DD7596;
-  border-color: #DD7596;
+  background-color: #dd7596;
+  border-color: #dd7596;
 }
 
 .btn-check:focus + .btn-outline-success, .btn-outline-success:focus {
@@ -3775,8 +3628,8 @@ fieldset:disabled .btn {
 .btn-check:checked + .btn-outline-success,
 .btn-check:active + .btn-outline-success, .btn-outline-success:active, .btn-outline-success.active, .btn-outline-success.dropdown-toggle.show {
   color: #000;
-  background-color: #DD7596;
-  border-color: #DD7596;
+  background-color: #dd7596;
+  border-color: #dd7596;
 }
 
 .btn-check:checked + .btn-outline-success:focus,
@@ -3786,19 +3639,19 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-success:disabled, .btn-outline-success.disabled {
-  color: #DD7596;
+  color: #dd7596;
   background-color: transparent;
 }
 
 .btn-outline-info {
-  color: #25D366;
-  border-color: #25D366;
+  color: #25d366;
+  border-color: #25d366;
 }
 
 .btn-outline-info:hover {
   color: #000;
-  background-color: #25D366;
-  border-color: #25D366;
+  background-color: #25d366;
+  border-color: #25d366;
 }
 
 .btn-check:focus + .btn-outline-info, .btn-outline-info:focus {
@@ -3809,8 +3662,8 @@ fieldset:disabled .btn {
 .btn-check:checked + .btn-outline-info,
 .btn-check:active + .btn-outline-info, .btn-outline-info:active, .btn-outline-info.active, .btn-outline-info.dropdown-toggle.show {
   color: #000;
-  background-color: #25D366;
-  border-color: #25D366;
+  background-color: #25d366;
+  border-color: #25d366;
 }
 
 .btn-check:checked + .btn-outline-info:focus,
@@ -3820,19 +3673,19 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-info:disabled, .btn-outline-info.disabled {
-  color: #25D366;
+  color: #25d366;
   background-color: transparent;
 }
 
 .btn-outline-warning {
-  color: #C13584;
-  border-color: #C13584;
+  color: #c13584;
+  border-color: #c13584;
 }
 
 .btn-outline-warning:hover {
   color: #fff;
-  background-color: #C13584;
-  border-color: #C13584;
+  background-color: #c13584;
+  border-color: #c13584;
 }
 
 .btn-check:focus + .btn-outline-warning, .btn-outline-warning:focus {
@@ -3843,8 +3696,8 @@ fieldset:disabled .btn {
 .btn-check:checked + .btn-outline-warning,
 .btn-check:active + .btn-outline-warning, .btn-outline-warning:active, .btn-outline-warning.active, .btn-outline-warning.dropdown-toggle.show {
   color: #fff;
-  background-color: #C13584;
-  border-color: #C13584;
+  background-color: #c13584;
+  border-color: #c13584;
 }
 
 .btn-check:checked + .btn-outline-warning:focus,
@@ -3854,7 +3707,7 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-warning:disabled, .btn-outline-warning.disabled {
-  color: #C13584;
+  color: #c13584;
   background-color: transparent;
 }
 
@@ -3893,14 +3746,14 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-light {
-  color: #4267B2;
-  border-color: #4267B2;
+  color: #4267b2;
+  border-color: #4267b2;
 }
 
 .btn-outline-light:hover {
   color: #fff;
-  background-color: #4267B2;
-  border-color: #4267B2;
+  background-color: #4267b2;
+  border-color: #4267b2;
 }
 
 .btn-check:focus + .btn-outline-light, .btn-outline-light:focus {
@@ -3911,8 +3764,8 @@ fieldset:disabled .btn {
 .btn-check:checked + .btn-outline-light,
 .btn-check:active + .btn-outline-light, .btn-outline-light:active, .btn-outline-light.active, .btn-outline-light.dropdown-toggle.show {
   color: #fff;
-  background-color: #4267B2;
-  border-color: #4267B2;
+  background-color: #4267b2;
+  border-color: #4267b2;
 }
 
 .btn-check:checked + .btn-outline-light:focus,
@@ -3922,7 +3775,7 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-light:disabled, .btn-outline-light.disabled {
-  color: #4267B2;
+  color: #4267b2;
   background-color: transparent;
 }
 
@@ -7525,7 +7378,7 @@ fieldset:disabled .btn {
 }
 
 .link-success {
-  color: #DD7596;
+  color: #dd7596;
 }
 
 .link-success:hover, .link-success:focus {
@@ -7533,7 +7386,7 @@ fieldset:disabled .btn {
 }
 
 .link-info {
-  color: #25D366;
+  color: #25d366;
 }
 
 .link-info:hover, .link-info:focus {
@@ -7541,7 +7394,7 @@ fieldset:disabled .btn {
 }
 
 .link-warning {
-  color: #C13584;
+  color: #c13584;
 }
 
 .link-warning:hover, .link-warning:focus {
@@ -7557,7 +7410,7 @@ fieldset:disabled .btn {
 }
 
 .link-light {
-  color: #4267B2;
+  color: #4267b2;
 }
 
 .link-light:hover, .link-light:focus {
@@ -7868,13 +7721,13 @@ fieldset:disabled .btn {
 }
 
 .shadow-sm {
-  -webkit-box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
-          box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
+  -webkit-box-shadow: 0 0.125rem 0.25rem rgba(252, 11, 192, 0.6) !important;
+          box-shadow: 0 0.125rem 0.25rem rgba(252, 11, 192, 0.6) !important;
 }
 
 .shadow-lg {
-  -webkit-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175) !important;
-          box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175) !important;
+  -webkit-box-shadow: 0 1rem 3rem rgba(252, 11, 192, 0.6) !important;
+          box-shadow: 0 1rem 3rem rgba(252, 11, 192, 0.6) !important;
 }
 
 .shadow-none {
@@ -8015,15 +7868,15 @@ fieldset:disabled .btn {
 }
 
 .border-success {
-  border-color: #DD7596 !important;
+  border-color: #dd7596 !important;
 }
 
 .border-info {
-  border-color: #25D366 !important;
+  border-color: #25d366 !important;
 }
 
 .border-warning {
-  border-color: #C13584 !important;
+  border-color: #c13584 !important;
 }
 
 .border-danger {
@@ -8031,7 +7884,7 @@ fieldset:disabled .btn {
 }
 
 .border-light {
-  border-color: #4267B2 !important;
+  border-color: #4267b2 !important;
 }
 
 .border-dark {
@@ -12108,7 +11961,152 @@ fieldset:disabled .btn {
   }
 }
 
-.btn-primary {
-  border-bottom: 3px solid black(0, 0, 0, 0.27);
+.bg-success {
+  --bs-bg-opacity: 50;
+  background-color: #eeeeee, var(50) !important;
+}
+
+.btn.btn-cta {
+  background-color: #aaa;
+  color: #393e46;
+  border-radius: 50px;
+  padding: 20px 30px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-weight: bolder;
+}
+
+.btn.btn-cta:hover {
+  background-color: #393e46;
+  color: #eeeeee;
+  border-radius: 50px;
+  padding: 20px 30px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-weight: bolder;
+  -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
+          box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
+}
+
+.btn:hover {
+  background-color: #eeeeee;
+  color: #393e46;
+  border-radius: 50px;
+  padding: 20px 30px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-weight: bolder;
+  -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
+          box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.container {
+  -webkit-box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
+  margin-top: 10rem;
+}
+
+header {
+  background-image: url(../img/bg4.jpg);
+  background-size: 100%;
+  /* box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
+    background-color: $primary; */
+}
+
+body {
+  background-color: #222831;
+  font-family: "Roboto", sans-serif;
+  background-image: url(../img/bg4.jpg);
+  background-size: 100% 100%;
+}
+
+body a {
+  color: #393e46;
+  text-decoration: none;
+}
+
+body h2, body .h2 {
+  font-weight: bolder;
+  font-size: 4.5rem;
+}
+
+body h3, body .h3 {
+  font-weight: lighter;
+  font-size: 2.5rem;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+
+ul li a {
+  text-decoration: none;
+  background-color: #222831;
+  color: #aaa;
+  border-radius: 50px;
+  padding: 20px 30px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-weight: bolder;
+}
+
+ul li a:hover {
+  background-color: #393e46;
+  color: #eeeeee;
+  border-radius: 50px;
+  padding: 20px 30px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-weight: bolder;
+  -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
+          box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
 }
 /*# sourceMappingURL=estilos.css.map */
