--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,19 +1,22 @@
-
+/* Colores */
 $primary: #222831;
 $secondary: #393e46;
-$terciary:#eeeeee;
+$terciary: #eeeeee;
 $font-color: #aaa;
-$success: #DD7596;
-$info: #25D366;
-$warning: #C13584;
-$light: #4267B2;
+$success: #dd7596;
+$info: #25d366;
+$warning: #c13584;
+$light: #4267b2;
 
-
-$box-shadow : 0 2px 10px 0 rgba(0, 0, 0, 0.6);
+/* Sombra */
+$box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
+$box-shadow-sm: 0 0.125rem 0.25rem rgba(252, 11, 192, 0.6);
+$box-shadow-lg: 0 1rem 3rem rgba(252, 11, 192, 0.6);
+$box-shadow-inset: inset 0 1px 2px rgba(252, 11, 192, 0.6);
 
 $enable-gradient: true;
 
-$btn-padding-y: .8rem;
+$btn-padding-y: 0.8rem;
 $btn-padding-x: 1rem;
 
 $btn-border-radius: 1rem;
@@ -24,8 +27,8 @@ $btn-border-radius: 1rem;
     margin: 0;
 }
 
+/* Boton Personalizado */
 @mixin btn($background-color, $color, $bold) {
-
     background-color: $background-color;
     color: $color;
     border-radius: 50px;
@@ -35,84 +38,82 @@ $btn-border-radius: 1rem;
     align-items: center;
     justify-content: space-around;
 
-    @if ($bold = 'true') {
-        font-weight: bolder;
+    @if ($bold = "true") {
+    font-weight: bolder;
     }
 }
 
-.btn{
-    &.btn-cta{
-        @include btn($font-color, $secondary , 'true');
-        &:hover{
-            @include btn($secondary, $terciary, 'true');
-            box-shadow: $box-shadow;
-        }
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+.bg-success {
+    --bs-bg-opacity: 50;
+    background-color: $terciary, var(50) !important;
+}
+
+.btn {
+    &.btn-cta {
+        @include btn($font-color, $secondary, "true");
+    &:hover {
+        @include btn($secondary, $terciary, "true");
+        box-shadow: $box-shadow;
     }
-    &:hover{
-        @include btn($terciary, $secondary , 'true');
+}
+    &:hover {
+        @include btn($terciary, $secondary, "true");
         box-shadow: $box-shadow;
     }
 }
 
-*{
+* {
     @include reset-pm();
     box-sizing: border-box;
 }
 
-body{
-    background-color: $primary;
-    font-family: "Roboto", sans-serif;    
-    background-image: url(../img/bg4.jpg);
-    background-size: 100% 100%;
-    a{
-        color:$secondary;
-        text-decoration: none;
-    }
-    h2{
-        font-weight: bolder;
-        font-size: 4.5rem;
-    }
-    h3{
-        font-weight: lighter;
-        font-size: 2.5rem;
-    }
-}
-.container{
+.container {
     box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
+    margin-top: 10rem;
 }
 
-ul{
+header {
+    background-image: url(../img/bg4.jpg);
+    background-size: 100%;
+    /* box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
+    background-color: $primary; */
+}
+
+body {
+    background-color: $primary;
+    font-family: "Roboto", sans-serif;
+    background-image: url(../img/bg4.jpg);
+    background-size: 100% 100%;
+    a {
+    color: $secondary;
+    text-decoration: none;
+    }
+    h2 {
+    font-weight: bolder;
+    font-size: 4.5rem;
+    }
+    h3 {
+    font-weight: lighter;
+    font-size: 2.5rem;
+    }
+}
+
+ul {
     @include reset-pm();
     list-style: none;
     display: flex;
-    gap:20px;
-    li{        
-        a{
-            text-decoration: none;
-            @include btn($primary, $font-color , 'true');
+    gap: 20px;
+    li {
+        a {
+        text-decoration: none;
+        @include btn($primary, $font-color, "true");
 
-            &:hover{
-                @include btn($secondary, $terciary, 'false');
-                box-shadow: $box-shadow;
-            }
+        &:hover {
+            @include btn($secondary, $terciary, "false");
+            box-shadow: $box-shadow;
         }
-        
+        }
     }
 }
-
-header{
-    nav{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        flex-wrap: wrap-reverse;
-    }
-}
-
-
-
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
-
-.btn-primary{
-    border-bottom: 3px solid black(0, 0, 0, 0.27);
-} 
