--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,22 @@
 /* Colores */
 /* Sombra */
-/* reseteo general */
+/* Padding - Margin - Especifico */
+/* Mapas de colores para Redes Sociales  */
+.facebook--link {
+  color: #1877f2;
+}
+
+.instagram--link {
+  color: #c32aa3;
+}
+
+.whatsapp--link {
+  color: #25d366;
+}
+
+/* Map - Get */
+/* Estilos para botones */
+/* Reseteo general */
 /* Boton Personalizado */
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
@@ -2753,7 +2769,7 @@ textarea.form-control-lg {
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   -moz-appearance: none;
-       appearance: none;
+      appearance: none;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -6179,7 +6195,7 @@ fieldset:disabled .btn {
 .btn-close:disabled, .btn-close.disabled {
   pointer-events: none;
   -webkit-user-select: none;
-     -moz-user-select: none;
+    -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
   opacity: 0.25;
@@ -12021,6 +12037,21 @@ fieldset:disabled .btn {
           box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
 }
 
+.btn-red {
+  background-color: #222831;
+  border-radius: 50px;
+  padding: 20px 30px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -12032,6 +12063,46 @@ fieldset:disabled .btn {
   -webkit-box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
           box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
   margin-top: 10rem;
+}
+
+.titulo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 35px;
+  /* h2{
+        position:relative;
+    }
+    & span{
+        position:absolute;
+        border-left: 1px solid #000;
+        
+        animation: maquina 5s infinite alternate steps(29);
+    } */
+}
+
+@-webkit-keyframes maquina {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0%;
+  }
+}
+
+@keyframes maquina {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0%;
+  }
 }
 
 header {
