--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,47 +1,7 @@
-/* Colores */
-$primary: #222831;
-$secondary: #393e46;
-$terciary: #eeeeee;
-$font-color: #aaa;
-$success: #dd7596;
-$info: #25d366;
-$warning: #c13584;
-$light: #4267b2;
+@import "variables";
+@import "maps";
+@import "mixin";
 
-/* Sombra */
-$box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
-$box-shadow-sm: 0 0.125rem 0.25rem rgba(252, 11, 192, 0.6);
-$box-shadow-lg: 0 1rem 3rem rgba(252, 11, 192, 0.6);
-$box-shadow-inset: inset 0 1px 2px rgba(252, 11, 192, 0.6);
-
-$enable-gradient: true;
-
-$btn-padding-y: 0.8rem;
-$btn-padding-x: 1rem;
-
-$btn-border-radius: 1rem;
-
-/* reseteo general */
-@mixin reset-pm {
-    padding: 0;
-    margin: 0;
-}
-
-/* Boton Personalizado */
-@mixin btn($background-color, $color, $bold) {
-    background-color: $background-color;
-    color: $color;
-    border-radius: 50px;
-    padding: 20px 30px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-
-    @if ($bold = "true") {
-    font-weight: bolder;
-    }
-}
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
@@ -64,6 +24,16 @@ $btn-border-radius: 1rem;
     }
 }
 
+.btn-red{
+    background-color: $primary;
+    border-radius: 50px;
+    padding: 20px 30px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 * {
     @include reset-pm();
     box-sizing: border-box;
@@ -72,6 +42,33 @@ $btn-border-radius: 1rem;
 .container {
     box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
     margin-top: 10rem;
+}
+
+.titulo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 35px;    
+    /* h2{
+        position:relative;
+    }
+    & span{
+        position:absolute;
+        border-left: 1px solid #000;
+        
+        animation: maquina 5s infinite alternate steps(29);
+    } */
+} 
+
+
+
+@keyframes maquina {
+    from{
+        width: 100%;
+    }
+    to{
+        width: 0%;
+    }
 }
 
 header {
