--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -43,45 +43,74 @@
     box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
     margin-top: 10rem;
 }
+header {
+    background-image: url(../img/bg4.jpg);
+    background-size: 100%;
+}
 
 .titulo{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 35px;    
-    /* h2{
+    font-size: 35px;
+    margin: 10px;    
+    h2{
         position:relative;
-    }
-    & span{
-        position:absolute;
-        border-left: 1px solid #000;
-        
-        animation: maquina 5s infinite alternate steps(29);
-    } */
-} 
+        color: $secondary;
 
+        &::after{
+            content: "";
+            position: absolute;
+            background-color: black;
+            height: 3px;
+            width: 0;
+            left: 0;
+            bottom: -10px;
+            transition: 0.1s;
+        }
+        &:hover{
+            color: black;
+        }
+        &:hover::after{
+            width: 100%;
+        }
+    } 
+}
 
-
-@keyframes maquina {
-    from{
-        width: 100%;
-    }
-    to{
-        width: 0%;
+.agitar{
+    
+    &:hover{
+        animation: agitar .8s ease-in;
     }
 }
 
-header {
-    background-image: url(../img/bg4.jpg);
-    background-size: 100%;
-    /* box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
-    background-color: $primary; */
+@keyframes agitar{  
+    0%{
+        transform: translate(0);
+    }
+    20%,
+    40%,
+    60%,
+    80%{
+        transform: translate(.8em);
+    }
+    10%,
+    30%,
+    50%{
+        transform: translate(-.2em);
+    }
+    70%,
+    100%{
+        transform:translate(0);
+    }
 }
+
+
 
 body {
     background-color: $primary;
     font-family: "Roboto", sans-serif;
-    background-image: url(../img/bg4.jpg);
+    background-image: url(../img/bg.jpg);
     background-size: 100% 100%;
     a {
     color: $secondary;
