optimize links nav, links footer y optimizacon general de paginas

--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Nosotros, Multimedios, Emprendimiento">
     <title>Eure-k Diseño Multimedial</title>
     <link rel="icon" href="./img/logo4.ico" />
     <script src="https://kit.fontawesome.com/67efa75ecc.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
@@ -18,7 +18,8 @@
     <header class="container-fluid fixed-top rounded">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="logo"><img src="./img/logoico.ico" class="agitar" width="160" height="130" alt="logo"></a>
+                <a href="index.html" class="logo"><img src="../img/logoico.ico" class="agitar" width="160" height="130"
+                        alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -27,19 +28,19 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="btn btn-cta" href="index.html">Inicio</a>
+                            <a class="btn btn-cta" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a href="tienda.html">Tienda</a>
+                            <a href="./tienda.html">Tienda</a>
                         </li>
                         <li class="nav-item">
-                            <a href="servicios.html">Servicios</a>
+                            <a href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a href="nosotros.html">Nosotros</a>
+                            <a href="./nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn-cta" href="contacto.html">Contacto</a>
+                            <a class="btn-cta" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -55,8 +56,8 @@
         <div class="mt-5">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Eure-k Diseño Multimedial</h5>
+                    <div class="card-body fw-bolder">
+                        <h2 class="card-title">Eure-k Diseño Multimedial</h2>
                         <p class="card-text text-uppercase">Somos un equipo de trabajo que se dedica al DISEÑO en
                             general, buscando
                             satisfacer las
@@ -67,22 +68,23 @@
                             MULTIMEDIALES!</p>
                         <p class="card-text"><small class="text-muted">Pedinos tu idea nosotros te la diseñamos</small>
                         </p>
-                        <button type="button" class="btn-red instagram--link"><i class="fab fa-instagram"></i></button>
+                        <button type="button" href="https://www.instagram.com/eurekdisenomultimedial/" target="_blank"
+                            class="btn-red instagram--link"><i class="fab fa-instagram"></i></button>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="./img/logo4.png" class="img-fluid rounded-start" alt="logo">
+                    <img src="../img/logo4.png" class="img-fluid rounded-start" alt="logo">
                 </div>
             </div>
         </div>
         <div class="text-white bg-dark mt-5">
             <div class="row g-0">
                 <div class="col">
-                    <img src="./img/logo2.png" class="img-fluid rounded-start" alt="trabajo">
+                    <img src="../img/logo2.png" class="img-fluid rounded-start" alt="trabajo">
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 fw-bolder">
                     <div class="card-body">
-                        <h5 class="card-title">Eure-k Diseño Multimedial</h5>
+                        <h2 class="card-title">Eure-k Diseño Multimedial</h2>
                         <p class="card-text text-uppercase">Somos un equipo de trabajo que se dedica al DISEÑO en
                             general, buscando
                             satisfacer las
@@ -92,7 +94,8 @@
                             "lo encontré!". Por esa razón, aquí encontraras las herramientas necesarias para TUS DISEÑOS
                             MULTIMEDIALES!</p>
                         <p class="card-text text"><small>Pedinos tu idea nosotros te la diseñamos</small></p>
-                        <button type="button" class="btn-red whatsapp--link"><i class="fab fa-whatsapp"></i></button>
+                        <button type="button" href="https://wa.me/+542804373032" target="_blank"
+                            class="btn-red whatsapp--link"><i class="fab fa-whatsapp"></i></button>
                     </div>
                 </div>
             </div>
@@ -105,41 +108,27 @@
         <!-- Iconos Redes Sociales -->
         <div class="d-flex justify-content-evenly m-5">
             <div>
-                <a href="#" class="btn-red facebook--link"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.facebook.com/eurek.disenomultimedial" target="_blank"
+                    class="btn-red facebook--link"><i class="fab fa-facebook"></i></a>
             </div>
             <div>
-                <a href="#" class="btn-red instagram--link"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/eurekdisenomultimedial/" target="_blank"
+                    class="btn-red instagram--link"><i class="fab fa-instagram"></i></a>
             </div>
             <div>
-                <a href="#" class="btn-red whatsapp--link"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/+542804373032" target="_blank" class="btn-red whatsapp--link"><i
+                        class="fab fa-whatsapp"></i></a>
             </div>
         </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-3">
-                    <a href="#" class="btn" >Ayuda</a>
-                </div>            
-                <div class="col-12 col-sm-3">
-                    <a href="#">Promociones</a>
-                </div>
-                <div class="col-12 col-sm-3">
-                    <a href="#">Sugerencias</a>
-                </div>
-                <div class="col-12 col-sm-3">
-                    <a href="#">Sugerencias</a>
-                </div>
-            </div>
-        </div>
-        
-
-        <div>
-            <ul class="d-flex justify-content-evenly">
-                <li><a href="">Ayuda</a></li>
-                <li><a href="">Promociones</a></li>
-                <li><a href="">Sugerencias</a></li>
-                <li><a href="">Sugerencias</a></li>
+        <!-- Botones Footer -->
+        <div class="p-5">
+            <ul class="justify-content-evenly pb-3 mb-3">
+                <li class=""><a href="#" class="px-4 text-muted-white">Ayuda</a></li>
+                <li class=""><a href="#" class="px-2 text-muted-white">Promociones</a></li>
+                <li class=""><a href="#" class="px-3 text-muted-white">Sugerencias</a></li>
+                <li class=""><a href="#" class="px-2 text-muted-white">Contactanos</a></li>
             </ul>
+            <p class="text-center text-muted-white p-5">&copy; Realizado por Bellido Leonardo - 2022 </p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
