--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12182,8 +12182,8 @@ body h2, body .h2 {
 }
 
 body h3, body .h3 {
-  font-weight: lighter;
-  font-size: 2.5rem;
+  font-weight: bolder;
+  font-size: 3.5rem;
 }
 
 ul {
