--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -57,7 +57,7 @@ header {
     h2{
         position:relative;
         color: $secondary;
-
+        
         &::after{
             content: "";
             position: absolute;
@@ -121,8 +121,8 @@ body {
     font-size: 4.5rem;
     }
     h3 {
-    font-weight: lighter;
-    font-size: 2.5rem;
+    font-weight: bolder;
+    font-size: 3.5rem;
     }
 }
 
