--- a/views/tienda.html
+++ b/views/tienda.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="./img/logo4.ico" />
     <script src="https://kit.fontawesome.com/67efa75ecc.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
@@ -19,7 +19,8 @@
     <header class="container-fluid fixed-top rounded">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="logo"><img src="./img/logoico.ico" class="agitar" width="160" height="130" alt="logo"></a>
+                <a href="index.html" class="logo"><img src="../img/logoico.ico" class="agitar" width="160" height="130"
+                        alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -28,19 +29,19 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="btn btn-cta" href="index.html">Inicio</a>
+                            <a class="btn btn-cta" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a href="tienda.html">Tienda</a>
+                            <a href="./tienda.html">Tienda</a>
                         </li>
                         <li class="nav-item">
-                            <a href="servicios.html">Servicios</a>
+                            <a href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a href="nosotros.html">Nosotros</a>
+                            <a href="./nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn-cta" href="contacto.html">Contacto</a>
+                            <a class="btn-cta" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -60,7 +61,7 @@
                 <!-- Card -->
                 <div class="card bg-secondary text-white">
                     <!-- Imagen -->
-                    <img src="./img/vinilonavidad.jpg" alt="promo" class="rounded-circle">
+                    <img src="../img/vinilonavidad.jpg" alt="promo" class="rounded-circle">
                     <div class="card-body">
                         <h5 class="card-title">Vinilo Navideño</h5>
                         <p class="card-text">Excelente vinilo termoperforado de Papa Noel para ambientar tu local o
@@ -76,7 +77,7 @@
                 <!-- Card -->
                 <div class="card bg-secondary text-white">
                     <!-- Imagen -->
-                    <img src="./img/promo vinilo.jpg" alt="diseño" class="card-img-top">
+                    <img src="../img/promo vinilo.jpg" alt="diseño" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Promociones</h5>
                         <p class="card-text">Diseño en vinilo para decorar tus accesorios como mas quieras</p>
@@ -94,7 +95,7 @@
                 <!-- Card -->
                 <div class="card bg-secondary text-white">
                     <!-- Imagen -->
-                    <img src="./img/vinilonavidad.jpg" alt="promo" class="rounded-circle">
+                    <img src="../img/vinilonavidad.jpg" alt="promo" class="rounded-circle">
                     <div class="card-body">
                         <h5 class="card-title">Vinilo Navideño</h5>
                         <p class="card-text">Excelente vinilo termoperforado de Papa Noel para ambientar tu local o
@@ -110,7 +111,7 @@
                 <!-- Card -->
                 <div class="card bg-secondary text-white">
                     <!-- Imagen -->
-                    <img src="./img/promo vinilo.jpg" alt="diseño" class="card-img-top">
+                    <img src="../img/promo vinilo.jpg" alt="diseño" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Diseño Personalizado</h5>
                         <p class="card-text">Diseño en vinilo para decorar tus accesorios como mas quieras</p>
@@ -128,7 +129,7 @@
                 <!-- Card -->
                 <div class="card bg-secondary text-white">
                     <!-- Imagen -->
-                    <img src="./img/promo vinilo.jpg" alt="diseño" class="card-img-top">
+                    <img src="../img/promo vinilo.jpg" alt="diseño" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Diseño Personalizado</h5>
                         <p class="card-text">Diseño en vinilo para decorar tus accesorios como mas quieras</p>
@@ -143,7 +144,7 @@
                 <!-- Card -->
                 <div class="card bg-secondary text-white">
                     <!-- Imagen -->
-                    <img src="./img/vinilonavidad.jpg" alt="promo" class="rounded-circle">
+                    <img src="../img/vinilonavidad.jpg" alt="promo" class="rounded-circle">
                     <div class="card-body">
                         <h5 class="card-title">Vinilo Navideño</h5>
                         <p class="card-text">Excelente vinilo termoperforado de Papa Noel para ambientar tu local o
@@ -162,21 +163,27 @@
         <!-- Iconos Redes Sociales -->
         <div class="d-flex justify-content-evenly m-5">
             <div>
-                <a href="#" class="btn-red facebook--link"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.facebook.com/eurek.disenomultimedial" target="_blank"
+                    class="btn-red facebook--link"><i class="fab fa-facebook"></i></a>
             </div>
             <div>
-                <a href="#" class="btn-red instagram--link"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/eurekdisenomultimedial/" target="_blank"
+                    class="btn-red instagram--link"><i class="fab fa-instagram"></i></a>
             </div>
             <div>
-                <a href="#" class="btn-red whatsapp--link"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/+542804373032" target="_blank" class="btn-red whatsapp--link"><i
+                        class="fab fa-whatsapp"></i></a>
             </div>
         </div>
-        <div>
-            <ul class="d-flex justify-content-evenly">
-                <li><a href="">Ayuda</a></li>
-                <li><a href="">Promociones</a></li>
-                <li><a href="">Sugerencias</a></li>
+        <!-- Botones Footer -->
+        <div class="p-5">
+            <ul class="justify-content-evenly pb-3 mb-3">
+                <li class=""><a href="#" class="px-4 text-muted-white">Ayuda</a></li>
+                <li class=""><a href="#" class="px-2 text-muted-white">Promociones</a></li>
+                <li class=""><a href="#" class="px-3 text-muted-white">Sugerencias</a></li>
+                <li class=""><a href="#" class="px-2 text-muted-white">Contactanos</a></li>
             </ul>
+            <p class="text-center text-muted-white p-5">&copy; Realizado por Bellido Leonardo - 2022 </p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
