--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -18,7 +18,7 @@
     <header class="container-fluid fixed-top rounded">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="logo"><img src="../img/logoico.ico" class="agitar" width="160" height="130"
+                <a href="../index.html" class="logo"><img src="../img/logoico.ico" class="agitar" width="160" height="130"
                         alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -56,8 +56,11 @@
         <div class="mt-5">
             <div class="row">
                 <div class="col-md-8">
+                    <!-- Card -->
                     <div class="card-body fw-bolder">
+                        <!-- Titulo Card -->
                         <h2 class="card-title">Eure-k Diseño Multimedial</h2>
+                        <!-- Informacion -->
                         <p class="card-text text-uppercase">Somos un equipo de trabajo que se dedica al DISEÑO en
                             general, buscando
                             satisfacer las
@@ -68,23 +71,29 @@
                             MULTIMEDIALES!</p>
                         <p class="card-text"><small class="text-muted">Pedinos tu idea nosotros te la diseñamos</small>
                         </p>
+                        <!-- Red social -->
                         <button type="button" href="https://www.instagram.com/eurekdisenomultimedial/" target="_blank"
                             class="btn-red instagram--link"><i class="fab fa-instagram"></i></button>
                     </div>
                 </div>
+                <!-- Imagen -->
                 <div class="col">
                     <img src="../img/logo4.png" class="img-fluid rounded-start" alt="logo">
                 </div>
             </div>
         </div>
-        <div class="text-white bg-dark mt-5">
+        <div class="text-white bg-dark bg-opacity-75 mt-5">
             <div class="row g-0">
+                <!-- Imagen -->
                 <div class="col">
                     <img src="../img/logo2.png" class="img-fluid rounded-start" alt="trabajo">
                 </div>
                 <div class="col-md-8 fw-bolder">
+                    <!-- Card -->
                     <div class="card-body">
+                        <!-- Titulo -->
                         <h2 class="card-title">Eure-k Diseño Multimedial</h2>
+                        <!-- Informacion -->
                         <p class="card-text text-uppercase">Somos un equipo de trabajo que se dedica al DISEÑO en
                             general, buscando
                             satisfacer las
@@ -94,6 +103,7 @@
                             "lo encontré!". Por esa razón, aquí encontraras las herramientas necesarias para TUS DISEÑOS
                             MULTIMEDIALES!</p>
                         <p class="card-text text"><small>Pedinos tu idea nosotros te la diseñamos</small></p>
+                        <!-- Red Social -->
                         <button type="button" href="https://wa.me/+542804373032" target="_blank"
                             class="btn-red whatsapp--link"><i class="fab fa-whatsapp"></i></button>
                     </div>
