--- a/views/tienda.html
+++ b/views/tienda.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Diseño Multimedial Personalizado">
-    <meta name="keywords" content="Tienda, Vinilo, Navidad, Decoracion">
+    <meta name="keywords" content="Tienda, Vinilo, Navidad, Decoracion, Indumentaria">
     <title>Eure-k Diseño Multimedial</title>
-    <link rel="icon" href="./img/logo4.ico" />
+    <link rel="icon" href="../img/logo4.ico" />
     <script src="https://kit.fontawesome.com/67efa75ecc.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -19,8 +19,8 @@
     <header class="container-fluid fixed-top rounded">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="logo"><img src="../img/logoico.ico" class="agitar" width="160" height="130"
-                        alt="logo"></a>
+                <a href="../index.html" class="logo"><img src="../img/logoico.ico" class="agitar" width="160"
+                        height="130" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -52,38 +52,84 @@
     <main class="container">
         <!-- Titulo -->
         <div class="titulo">
-            <h2>Bienvenido a la Tienda</h2>
+            <h2>Bienvenido</h2>
+            <span class="fw-bolder">A la Tienda</span>
         </div>
         <!-- Fila -->
         <div class="row">
             <!-- Columna -->
-            <div class="col-12 col-sm-6 p-2">
+            <div class="col-12 col-md-6 col-xl-3">
                 <!-- Card -->
-                <div class="card bg-secondary text-white">
-                    <!-- Imagen -->
-                    <img src="../img/vinilonavidad.jpg" alt="promo" class="rounded-circle">
-                    <div class="card-body">
-                        <h5 class="card-title">Vinilo Navideño</h5>
-                        <p class="card-text">Excelente vinilo termoperforado de Papa Noel para ambientar tu local o
-                            simplemente tu hogar</p>
-                    </div>
-                    <div class="card-footer btn btn-cta ">
-                        <p class="text-center m-0">$2000</p>
+                <div class="card producto mt-3 bg-secondary bg-opacity-75 text-white">
+                    <div class="align-items-center pt-5 text-center">
+                        <img src="../img/gorra1.png" alt="Gorra Personalizada" class="rounded" width="199">
+                        <h4>Gorra Personalizada</h4>
+                        <!-- Informacion -->
+                        <div class="mt-3 info">
+                            <span class="d-block">Elegi el diseño que mas te guste</span>
+                            <span class="d-block">Consultanos</span>
+                        </div>
+                        <!-- Precio -->
+                        <div class="precio mt-3">
+                            <span>$999.99</span>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Columna -->
-            <div class="col-12 col-sm-6 p-2">
+            <div class="col-12 col-md-6 col-xl-3">
                 <!-- Card -->
-                <div class="card bg-secondary text-white">
-                    <!-- Imagen -->
-                    <img src="../img/promo vinilo.jpg" alt="diseño" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Promociones</h5>
-                        <p class="card-text">Diseño en vinilo para decorar tus accesorios como mas quieras</p>
+                <div class="card producto mt-3 bg-secondary bg-opacity-75 text-white">
+                    <div class="align-items-center pt-5 text-center">
+                        <img src="../img/remera1.png" alt="Remera Personalizada" class="rounded" width="225">
+                        <h4>Remera Personalizada</h4>
+                        <!-- Informacion -->
+                        <div class="mt-3 info">
+                            <span class="d-block">Elegi el diseño que mas te guste</span>
+                            <span class="d-block">Consultanos</span>
+                        </div>
+                        <!-- Precio -->
+                        <div class="precio mt-3">
+                            <span>$699.99</span>
+                        </div>
                     </div>
-                    <div class="card-footer btn btn-success">
-                        <p class="text-center m-0">$800</p>
+                </div>
+            </div>
+            <!-- Columna -->
+            <div class="col-12 col-md-6 col-xl-3">
+                <!-- Card -->
+                <div class="card producto mt-3 bg-secondary bg-opacity-75 text-white">
+                    <div class="align-items-center pt-5 text-center">
+                        <img src="../img/gorra1.png" alt="Gorra Personalizada" class="rounded" width="199">
+                        <h4>Gorra Personalizada</h4>
+                        <!-- Informacion -->
+                        <div class="mt-3 info">
+                            <span class="d-block">Elegi el diseño que mas te guste</span>
+                            <span class="d-block">Consultanos</span>
+                        </div>
+                        <!-- Precio -->
+                        <div class="precio mt-3">
+                            <span>$999.99</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Columna -->
+            <div class="col-12 col-md-6 col-xl-3">
+                <!-- Card -->
+                <div class="card producto mt-3 bg-secondary bg-opacity-75 text-white">
+                    <div class="align-items-center pt-5 text-center">
+                        <img src="../img/remera1.png" alt="Remera Personalizada" class="rounded" width="225">
+                        <h4>Remera Personalizada</h4>
+                        <!-- Informacion -->
+                        <div class="mt-3 info">
+                            <span class="d-block">Elegi el diseño que mas te guste</span>
+                            <span class="d-block">Consultanos</span>
+                        </div>
+                        <!-- Precio -->
+                        <div class="precio mt-3">
+                            <span>$699.99</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -91,73 +137,83 @@
         <!-- Fila -->
         <div class="row">
             <!-- Columna -->
-            <div class="col-12 col-sm-6 p-2">
+            <div class="col-12 col-md-6 col-xl-3">
                 <!-- Card -->
-                <div class="card bg-secondary text-white">
-                    <!-- Imagen -->
-                    <img src="../img/vinilonavidad.jpg" alt="promo" class="rounded-circle">
-                    <div class="card-body">
-                        <h5 class="card-title">Vinilo Navideño</h5>
-                        <p class="card-text">Excelente vinilo termoperforado de Papa Noel para ambientar tu local o
-                            simplemente tu hogar</p>
-                    </div>
-                    <div class="card-footer btn btn-outline-dark">
-                        <p class="text-center m-0">$2000</p>
+                <div class="card producto mt-3 bg-secondary bg-opacity-75 text-white">
+                    <div class="align-items-center pt-5 text-center">
+                        <img src="../img/gorra1.png" alt="Gorra Personalizada" class="rounded" width="199">
+                        <h4>Gorra Personalizada</h4>
+                        <!-- Informacion -->
+                        <div class="mt-3 info">
+                            <span class="d-block">Elegi el diseño que mas te guste</span>
+                            <span class="d-block">Consultanos</span>
+                        </div>
+                        <!-- Precio -->
+                        <div class="precio mt-3">
+                            <span>$999.99</span>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Columna -->
-            <div class="col-12 col-sm-6 p-2">
+            <div class="col-12 col-md-6 col-xl-3">
                 <!-- Card -->
-                <div class="card bg-secondary text-white">
-                    <!-- Imagen -->
-                    <img src="../img/promo vinilo.jpg" alt="diseño" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Diseño Personalizado</h5>
-                        <p class="card-text">Diseño en vinilo para decorar tus accesorios como mas quieras</p>
-                    </div>
-                    <div class="card-footer btn">
-                        <p class="text-center m-0">$800</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Fila -->
-        <div class="row">
-            <!-- Columna -->
-            <div class="col-12 col-sm-6 p-2">
-                <!-- Card -->
-                <div class="card bg-secondary text-white">
-                    <!-- Imagen -->
-                    <img src="../img/promo vinilo.jpg" alt="diseño" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Diseño Personalizado</h5>
-                        <p class="card-text">Diseño en vinilo para decorar tus accesorios como mas quieras</p>
-                    </div>
-                    <div class="card-footer btn btn-outline-dark">
-                        <p class="text-center m-0">$800</p>
+                <div class="card producto mt-3 bg-secondary bg-opacity-75 text-white">
+                    <div class="align-items-center pt-5 text-center">
+                        <img src="../img/remera1.png" alt="Remera Personalizada" class="rounded" width="225">
+                        <h4>Remera Personalizada</h4>
+                        <!-- Informacion -->
+                        <div class="mt-3 info">
+                            <span class="d-block">Elegi el diseño que mas te guste</span>
+                            <span class="d-block">Consultanos</span>
+                        </div>
+                        <!-- Precio -->
+                        <div class="precio mt-3">
+                            <span>$699.99</span>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Columna -->
-            <div class="col-12 col-sm-6 p-2">
+            <div class="col-12 col-md-6 col-xl-3">
                 <!-- Card -->
-                <div class="card bg-secondary text-white">
-                    <!-- Imagen -->
-                    <img src="../img/vinilonavidad.jpg" alt="promo" class="rounded-circle">
-                    <div class="card-body">
-                        <h5 class="card-title">Vinilo Navideño</h5>
-                        <p class="card-text">Excelente vinilo termoperforado de Papa Noel para ambientar tu local o
-                            simplemente tu hogar</p>
+                <div class="card producto mt-3 bg-secondary bg-opacity-75 text-white">
+                    <div class="align-items-center pt-5 text-center">
+                        <img src="../img/gorra1.png" alt="Gorra Personalizada" class="rounded" width="199">
+                        <h4>Gorra Personalizada</h4>
+                        <!-- Informacion -->
+                        <div class="mt-3 info">
+                            <span class="d-block">Elegi el diseño que mas te guste</span>
+                            <span class="d-block">Consultanos</span>
+                        </div>
+                        <!-- Precio -->
+                        <div class=" precio mt-3">
+                            <span>$999.99</span>
+                        </div>
                     </div>
-                    <div class="card-footer btn btn-outline-dark">
-                        <p class="text-center m-0">$2000</p>
+                </div>
+            </div>
+            <!-- Columna -->
+            <div class="col-12 col-md-6 col-xl-3">
+                <!-- Card -->
+                <div class="card producto mt-3 bg-secondary bg-opacity-75 text-white">
+                    <div class="align-items-center pt-5 text-center">
+                        <img src="../img/remera1.png" alt="Remera Personalizada" class="rounded" width="225">
+                        <h4>Remera Personalizada</h4>
+                        <!-- Informacion -->
+                        <div class="mt-3 info">
+                            <span class="d-block">Elegi el diseño que mas te guste</span>
+                            <span class="d-block">Consultanos</span>
+                        </div>
+                        <!-- Precio -->
+                        <div class="precio mt-3">
+                            <span>$699.99</span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-
     <!-- Footer -->
     <footer class="container-fluid p-3 mb-5 rounded mt-5">
         <!-- Iconos Redes Sociales -->
