--- a/views/contacto.html
+++ b/views/contacto.html
@@ -19,7 +19,7 @@
     <header class="container-fluid fixed-top rounded">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="logo"><img src="../img/logoico.ico" class="agitar" width="160" height="130"
+                <a href="../index.html" class="logo"><img src="../img/logoico.ico" class="agitar" width="160" height="130"
                         alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
