--- a/views/servicios.html
+++ b/views/servicios.html
@@ -19,7 +19,7 @@
     <header class="container-fluid fixed-top rounded">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="logo"><img src="../img/logoico.ico" class="agitar" width="160" height="130"
+                <a href="../index.html" class="logo"><img src="../img/logoico.ico" class="agitar" width="160" height="130"
                         alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -55,16 +55,16 @@
             <h2>Nuestros Servicios</h2>
         </div>
         <!-- Columna Video -->
-        <div class="container-fluid d-flex flex-column flex-xl-row pb-5">
+        <div class="container-fluid d-flex bg-primary bg-opacity-75 flex-column flex-xl-row pb-5">
             <!-- Video -->
-            <div class="col-12 col-xl-6 d-flex justify-content-center align-items-center ">
+            <div class="col-12 col-xl-6 d-flex justify-content-center align-items-center pt-5">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/qGqn4mAbpas"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
             <!-- Texto -->
-            <div class="col-xl-6">
+            <div class="col-xl-6 text-white">
                 <h3 class="d-flex justify-content-center align-items-center my-xl-5">
                     Edición de Video</h3>
                 <p class="text-align-center card-text text-uppercase fw-bolder">Video Clip perzonalizado
@@ -75,9 +75,9 @@
         </div>
         <hr>
         <!-- Columna Video -->
-        <div class="container-fluid d-flex flex-column flex-xl-row pb-5">
+        <div class="container-fluid bg-primary bg-opacity-75 d-flex flex-column flex-xl-row pb-5">
             <!-- Texto -->
-            <div class="col-xl-6">
+            <div class="col-xl-6 text-white">
                 <h3 class="d-flex justify-content-center align-items-center my-xl-5">
                     Edición de Video</h3>
                 <p class="text-align-center card-text text-uppercase fw-bolder">Video Clip perzonalizado
@@ -86,7 +86,7 @@
                     Eure-k - Diseño Multimedial</p>
             </div>
             <!-- Video -->
-            <div class="col-12 col-xl-6 d-flex justify-content-center align-items-center ">
+            <div class="col-12 col-xl-6 d-flex justify-content-center align-items-center mt-5">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/N3a915UiZJg"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
